Update Bottom Navigation Menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">Swiggy-Clone-App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="current_location">Acharya Bhaban, Palashi, Barasat, West Bengal</string>
+    <string name="current_location">Acharya Bhaban, Palashi, West Bengal</string>
+    <string name="short_location">North 24 Pgs, West Bengal</string>
+    <string name="city_location">Barasat</string>
+    <string name="app_tagline">Discover \nWhats Near</string>
+    <string name="end_note">Thats all for now! :)</string>
+
 </resources>
