Make searchbar components reusable across fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="content_DOB">14-04-2002</string>
     <string name="place_category1_tagline">Restaurants, Cafe to hang out in your area</string>
     <string name="place_category1"><![CDATA[Food & Drinks]]></string>
+    <string name="crafted_by">Crafted with ❤️ by Bhaskar Acharjee</string>
 
 </resources>
