--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Nearby-Locator</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="current_location">Fetching your current location</string>
-    <string name="short_location">North 24 Pgs, West Bengal</string>
+    <string name="short_location">Fetching your current location</string>
     <string name="city_location">Updating...</string>
     <string name="app_tagline">Discover \nWhats Near</string>
     <string name="end_note">Thats all for now! :)</string>
